--- a/style.css
+++ b/style.css
@@ -402,3 +402,9 @@ li {
     text-decoration: none;
     cursor: pointer;
 }
+
+.box:hover {
+    transform: rotate(0deg);
+    margin-left: 0px;
+    transition: transform 1s;
+}
